--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-  <link href="style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -222,7 +222,6 @@
   <div id="footer"></div>
 
   <script>
-      // Sử dụng JavaScript để nạp header và footer
       document.addEventListener("DOMContentLoaded", function() {
           fetch("header.html")
               .then(response => response.text())
