--- a/aboutus.html
+++ b/aboutus.html
@@ -8,6 +8,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <title>About Us</title>
 </head>
 <body>
